# scope

./: README.md  pyproject.toml
examples/: read-power.py
src/: TechtileScope.py
trials-tests/: 07_meas_phase_raw_data  meas-phase
trials-tests/02_meas_channel_power/: main.py  scope.py
trials-tests/03_channel_power_watt/: main.py
trials-tests/04_channel_power_watt_multiple_channel/: main.py
trials-tests/05_meas_multiple_phases/: main.py
trials-tests/06_show_curves/: main.py
