[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "techtile_scope"
version = "0.0.1"
authors = [
  { name="Gilles Callebaut"},
  { name="Daan Delabie"},
]
description = "Techtile Scope package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'numpy',
  'scipy',
  'git+https://github.com/hgrecco/pyvisa.git#egg=pyvisa',
  'time'
]

[project.urls]
Homepage = "https://github.com/techtile-by-dramco/scope"
Issues = "https://github.com/techtile-by-dramco/scope/issues"